@@ -2,10 +2,8 @@ package hddEditor.ui.partitionPages;
 
 import java.io.File;
 import java.io.IOException;
-import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.dnd.DND;
@@ -366,11 +364,8 @@ public class TrDosPartitionPage extends GenericPage {
 		int i = 0;
 		for (String file : filenames) {
 			try {
-				URL url = new URL(file);
-				URI uri = url.toURI();
+				URI uri = new URI(file);
 				file = uri.getPath();
-			} catch (MalformedURLException e) {
-				System.out.println("Cannot parse " + file);
 			} catch (URISyntaxException e) {
 				System.out.println("Cannot parse " + file);
 			}
